# conversational-music-recsys

./: .env.example  .gitignore  AGENTS.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.agents/skills/codabench-submission/: SKILL.md
configs/: bm25_baseline.yaml  dense_baseline.yaml
docs/: ChangeLog.md
notebooks/: 01_EDA.ipynb  02_BM25_Baseline.ipynb  03_Deep_EDA.ipynb  04_Simple_Baseline.ipynb
scripts/: clone_baselines.sh  download_data.ipynb  download_data.py
src/: __init__.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  base_crs.py
src/retrieval/: __init__.py  bm25_retrieval.py  dense_retrieval.py
src/utils/: __init__.py  config.py  data_loader.py
tests/: test_metrics.py
