[project]
name = "recsys2026-music-crs"
version = "0.1.0"
description = "RecSys Challenge 2026 - Conversational Music Recommendation System (Music-CRS)"
authors = [{ name = "s0k0b3h" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
